# StreamlitForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FLOYD.md  HANDOFF.md  LICENSE  MANIFEST.in  PLANNING.md  README.md  pyproject.toml  requirements.txt
app/: app.py
app/agents/: builder_agent.py
app/pages/: builder.py  converter.py  dashboard.py  deployment.py  knowledge.py  llm_status.py  mcp.py  projects.py  settings.py  templates.py
app/utils/: session.py
docs/: quickstart.md
streamlitforge/: __init__.py  builder.py  cli.py  converter.py  deployment.py  mcp_integration.py  persona.py
streamlitforge/core/: __init__.py  api_keys.py  config.py  port_manager.py  project_manager.py
streamlitforge/knowledge/: __init__.py  auto_update.py  streamlit_kb.py
streamlitforge/llm/: __init__.py  base.py  cache.py  router.py
streamlitforge/llm/providers/: __init__.py  _openai_compat.py  anthropic.py  aws.py  azure.py  cohere.py  deepseek.py  google.py  groq.py  jan.py  lmstudio.py  localai.py  mistral.py  ollama.py  openai.py  opencode.py  openrouter.py  pattern_library.py  replicate.py  together.py  vllm.py
streamlitforge/patterns/: __init__.py  charts.json  data_handlers.json  examples.py  forms.json  layouts.json  learner.py  streamlit_components.json
streamlitforge/templates/: __init__.py
streamlitforge/templates/components/: chart.py.j2  form.py.j2  table.py.j2
streamlitforge/templates/files/: config.toml.j2  readme.md.j2  requirements.txt.j2  run.sh.j2
streamlitforge/tests/: test_api_keys.py  test_auto_update.py  test_builder.py  test_cli.py  test_config.py  test_converter.py  test_deployment.py  test_llm.py  test_llm_base.py  test_mcp_integration.py  test_patterns.py  test_persona.py  test_port_manager.py  test_project_manager.py  test_streamlit_kb.py
streamlitforge/utils/: __init__.py  filesystem.py  hashing.py  validation.py
